sites/navy/clusters/dal-navy-core-1/wave-2/overlays/traefik-public/middleware-anubis.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: anubis
spec:
  forwardAuth:
    address: http://anubis-service.anubis.svc.cluster.local:8080/.within.website/x/cmd/anubis/api/check
    trustForwardHeader: true
    maxResponseBodySize: 4194304
