sites/navy/clusters/dal-navy-core-1/wave-2/overlays/traefik-public/middleware-ratelimit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
spec:
  rateLimit:
    average: 500
    burst: 200
