sites/navy/clusters/dal-navy-core-1/wave-2/overlays/traefik-public/network-policy-traefik.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-public
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    # Allow broad external and internal access
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "443"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*.plex.svc.cluster.local"
              - matchPattern: "plex-plex-media-server"
              - matchPattern: "plex-plex-media-server.plex"
              - matchPattern: "*.anubis.svc.cluster.local"
              - matchPattern: "anubis-service"
              - matchPattern: "anubis-service.anubis"
              - matchPattern: "*.authentik.svc.cluster.local"
              - matchPattern: "authentik-server"
              - matchPattern: "authentik-server.authentik"
              - matchPattern: "*.todo.svc.cluster.local"
              - matchPattern: "todo"
              - matchPattern: "todo.todo"
              - matchPattern: "plugins.traefik.io"
              - matchPattern: "get.geojs.io"
              - matchPattern: "*.github.com"
              - matchPattern: "github.com"
              - matchPattern: "raw.githubusercontent.com"
              - matchPattern: "codeload.github.com"
              - matchPattern: "api.github.com"
    - toEndpoints:
        # Namespaces that host services
        # Access within the namespace is managed by the namespace itself
        - matchLabels:
            io.kubernetes.pod.namespace: plex
        - matchLabels:
            io.kubernetes.pod.namespace: anubis
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
        - matchLabels:
            io.kubernetes.pod.namespace: todo
    - toFQDNs:
        - matchName: "plugins.traefik.io"
        - matchName: "get.geojs.io"
        - matchPattern: "*.github.com"
        - matchName: "github.com"
        - matchName: "raw.githubusercontent.com"
        - matchName: "codeload.github.com"
        - matchName: "api.github.com"
